# mock/swagger.yml
@@ -1098,6 +1098,44 @@ paths:
                   message:
                     type: string  
                     
+                     
+                       
+  /order/manualPay:
+    post:
+      tags: cats
+      summary: ceshi
+      description:  
+      operationId: manualPay
+      responses:
+        "200":
+          description: A successful response
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string  
+                    
+                     
+                       
+  /order/select:
+    post:
+      tags: cats
+      summary: ceshi
+      description:  
+      operationId: selectOrders
+      responses:
+        "200":
+          description: A successful response
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string  
+                    
                                     
 components:
   securitySchemes:
